--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "express-async-errors": "^3.1.1"
   }
 }
